Overflow hidden for page X-extension preventing

--- a/graphic-design-v1-00/styles_00_General.css
+++ b/graphic-design-v1-00/styles_00_General.css
@@ -6,16 +6,21 @@
     --m-btn-width: 40px;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: "Quicksand", sans-serif;
+    scroll-behavior: smooth;
+    /* overflow: hidden; */
+}
+
 section {
     width: 100%;
     height: 100vh;
     margin: 0;
     padding: 0;
-}
-
-body {
-    font-family: "Quicksand", sans-serif;
-    /* scroll-behavior: smooth; */
 }
 
 .section-border-line {
@@ -59,10 +64,6 @@ h1 {
 } */
 
 #nav-plate {
-    top:0;
-    left: 0;
-    padding: 0;
-    margin: 0;
     min-width: 250px;
     box-sizing: content-box;
     position: fixed;
@@ -70,7 +71,7 @@ h1 {
     left: 0;
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: 100vw;
     height: 70px;
     cursor: auto;
     display: flex;
@@ -379,14 +380,6 @@ button {
 }
 
 
-#scrollInfo {
-    background-color: gray;
-    color: white;
-    position: fixed;
-    top:0;
-    right:0;
-    display: inline-block;
-}
 
  @media screen and (max-width: 1100px) {
     #nav-plate {
