--- a/graphic-design-v1-00/styles_02_Portfolio.css
+++ b/graphic-design-v1-00/styles_02_Portfolio.css
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
     /* border: 1px dashed black; */
     --slider-animation-time: 1000ms;
 }
