--- a/graphic-design-v1-00/styles_05_Weather.css
+++ b/graphic-design-v1-00/styles_05_Weather.css
@@ -24,6 +24,7 @@ body {
 
 #weather-grid-container {
     /* border: 1px dashed gray; */
+    overflow: hidden;
     width: 95vw;
     height: 60vh;
     min-height: 500px;
